--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,4 +1,21 @@
 .customHeader {
-    align-items: flex-start;
-    background-color: #a4acbd;
+    background-color: #282c34;
+    text-align: center;
+    align-items: center;
+    justify-content: flex-start;
+    display: flex;
+}
+
+.customHeader .link {
+    flex: 1;
+    color: white;
+    width: 34%;
+    text-decoration: none;
+    font-size: 1.5em;
+    margin: 0;
+    height: 4rem;
+    border: 1px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
